...
            android:layout_height="wrap_content"
            android:text="@string/enter_current_job"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_enter_job_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_job_details"
            android:textAlignment="textStart"
            android:textSize="24sp" />

...
