...
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="mainmenu">Main Menu</string>
    <string name="enter_job_details">Enter Job Offer</string>
    <string name="compare_jobs">Compare Jobs</string>
    <string name="set_comparison_weights">Set Comparison Weights</string>
    <string name="yearly_salary_weight">Yearly Salary Weight</string>
    <string name="yearly_salary">Yearly Salary</string>
    <string name="signing_bonus_weight">Signing Bonus Weight</string>
    <string name="yearly_bonus_weight">Yearly Bonus Weight</string>
...
